--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.7",
     "neo4j-driver": "^5.28.1",
     "neovis.js": "^2.1.0",
+    "tailwindcss": "^4.1.7",
     "vue": "^3.5.13"
   },
   "devDependencies": {
